--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
       }
     </script>-->
 
-    <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/ionic.app.css" rel="stylesheet"> // eliminamos las css y ponemos la nueva ruta css/ionic.app.css
     
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
